# SPACE

./: README.md
Cardinality Estimation Model/: transformer_based_cardinality_estimator.py  utils.py
Cardinality Estimation Model/Path Patterns/: yago_path_patterns.txt
Generate Training Data/: README.md  sampler.cpp  trie.hpp
Path-Cardinality-Estimation-main/Cardinality Estimation Model/: cardinality_estimator.py  run_estimation.py
Path-Cardinality-Estimation-main/Generate Training Data/: CMakeLists.txt  enumerator-main.cpp  enumerator.cpp  enumerator.hpp  model.cpp  model.hpp  sampler-main.cpp  sampler.hpp  trie.cpp
dataset/: moreno.txt
